--- a/main.bib
+++ b/main.bib
@@ -773,6 +773,14 @@
    pages = "36--41",
 }
 
+@ARTICLE{ulmerVITA-II,
+   author = "Berthold Ulmer",
+   title = "{VITA II} - {A}ctive {C}ollision {A}voidance in {T}raffic",
+   journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
+   year = 1994,
+   pages = "1--6",
+}
+
 @ARTICLE{ubergizmo,
    author = "Tyler Lee",
    title = "{N}okia's {HERE} {M}aps {P}owers {S}elf-{D}riving {M}ercedes {S}-{C}lass {V}ehicle",
@@ -814,6 +822,265 @@
    year = 1994,
    pages = "68--73",
 }
+
+@ARTICLE{rainADAS,
+   author = "Aurelien Cord and Nicolas Gimonet",
+   title = "{D}etecting {U}nfocused {R}aindrops: {I]n-{V}ehicle {M}ultipurpose {C}ameras",
+   journal = "IEEE Robotics and Automation Magazine",
+   month = "March",
+   year = 2014,
+   pages = "49--56",
+}
+
+@ARTICLE{makingBertha,
+   author = "Jurgen Dickmann and Nils Appenrodt and Carsten Brenk",
+   title = "{M}aking {B}ertha: {R}adar is the key to {M}ercedes-{B}enz's robotic car",
+   journal = "IEEE Spectrum",
+   month = "August",
+   year = 2014,
+   pages = "44-49",
+}
+
+@ARTICLE{fukuda,
+   author = "Yoshitaka Fukuda and Kazuyuki Kobayashi and Kajiro Watanabe and Tetsuo Kinoshita",
+   title = "{T}arget object classification based on a fusion of {LIDAR} range and intensity data",
+   journal = "2014 Proceedings of the SICE Annual Conference",
+   year = 2014,
+   pages = "1312--1317",
+}
+
+@INCOLLECTION{collisionPaper,
+   author = "Luke Fletcher and Seth Teller and Edwin Olson and David Moore and Yoshiaki Kuwata and Jonathan How and John Leonard and Isaac Miller and Mark Campbell and Dan Huttenlocher and Aaron Nathan and Frank-Robert Kline",
+   title = "{T}he {MIT}--{C}ornell {C}ollision and {W}hy it {H]appened",
+   booktitle = "The DARPA Urban Challenge",
+   publisher = "Springer Berlin / Heidelberg"
+   year = 2009,
+   pages = "509--548",
+}
+
+@UNPUBLISHED{volvovideo,
+   author = "Volvo Cars",
+   title = "S60 Advertisement",
+   note = "https://www.youtube.com/watch?v=UdTQfegCxF8, accessed January 28, 2015",
+}
+
+@ARTICLE{lehrerNeuro,
+   author = "Jonah Lehrer",
+   title = "{T}he {R}hetoric of {N}euroscience",
+   journal = "Wired",
+   month = "August 11",
+   year = 2011,
+   note = "http://www.wired.com/2011/08/the-rhetoric-of-neuroscience/",
+}
+
+@ARTICLE{koerthFish,
+   author = "Maggie Koerth-Baker",
+   title = "{W}hat a dead fish can teach you about neuroscience and statistics",
+   journal = "BoingBoing",
+   month = "October 2",
+   year = 2012,
+   note = "http://boingboing.net/2012/10/02/what-a-dead-fish-can-teach-you.html",
+}
+
+@ARTICLE{sofgeAIFears,
+   author = "Erik Sofge",
+   title = "{B}ill {G}ates {F}ears {A}.{I}., but {A}.{I}. {R}esearchers {K}now {B}etter",
+   journal = "Popular Science",
+   month = "January 30",
+   year = 2015,
+   note = "http://www.popsci.com/bill-gates-fears-ai-ai-researchers-know-better?cmpid=currents"
+}
+
+@ARTICLE{huntIntelligence,
+   author = "Earl Hunt",
+   title = "{D}efining intelligence, step 2: {H}ow should we define intelligence?",
+   journal = "Psychology Today",
+   month = "May 30",
+   year = 2014,
+   note = "https://www.psychologytoday.com/blog/exploring-intelligence/201105/defining-intelligencestep-2"
+}
+
+@ARTICLE{ornstein,
+   author = "Servero M. Ornstein and Brian C. Smith and Lucy A. Suchman",
+   title = "{S}trategic computing",
+   journal = "Bulletin of Atomic Scientists",
+   month = "December",
+   year = 1984,
+   pages = 11--15,
+}
+
+@ARTICLE{merill,
+   author = "Brad Merrill",
+   title = "{H}ow {S}elf-{D}riving {C}ars {W}ill {C}hange {T}ransportation {F}orever",
+   journal = "MakeUseOf",
+   month = "December 10",
+   year = 2014,
+   note = "http://www.makeuseof.com/tag/self-driving-cars-will-change-transportation-forever/"
+}
+
+@BOOK{Collins,
+   author = "H. M. Collins",
+   title = "Artificial Experts",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "1990",
+}
+
+@ARTICLE{higgins,
+   author = "Parker Higgins",
+   title = "{DRM} in {C}ars {W}ill {D}rive {C}onsumers",
+   journal = "Electronic Frontier Foundatoin",
+   month = "November 13",
+   year = 2013,
+   note = "https://www.eff.org/deeplinks/2013/11/drm-cars-will-drive-consumers-crazy"
+}
+
+@TECHREPORT{censusDeaths,
+   author = "U.S. Census Bureau",
+   title = "Table 1103. Motor Vehicle Accidents--Number and Deaths: 1990 to 2009",
+   number = "Statistical Abstract of the United States: 2012"
+   note = "Transportation, p. 693, https://www.census.gov/compendia/statab/2012/tables/12s1103.pdf",
+}
+
+@TECHREPORT{fhwa,
+   author = "Federal Highway Administration",
+   title = "Table 1103. Motor Vehicle Accidents--Number and Deaths: 1990 to 2009",
+   number = "2013 Status of the Nation's Highways, Bridges, and Transit: Conditions \& Performance"
+   note = "Exhibit 1--5, http://www.fhwa.dot.gov/policy/2013cpr/chap1.htm#5",
+}
+
+@ARTICLE{8truthsandmyths,
+   author = "Erin Carson",
+   title = "8 truths and myths of driverless cars",
+   journal = "Tech Republic",
+   month = "September 15",
+   year = 2014,
+   note = "http://www.techrepublic.com/article/8-truths-and-myths-of-driverless-cars/"
+}
+
+@ARTICLE{driverlessfuture,
+   author = "Alexander Hars",
+   title = "Accident rates of self-driving cars: A critique of the {S}ivak/{S}choettle study",
+   journal = "Driverless Car Market Watch",
+   month = "January 17",
+   year = 2015,
+   note = "http://www.driverless-future.com/?p=720",
+}
+
+@ARTICLE{Wilde,
+   author = "Gerald Wilde",
+   title = "Risk homeostasis theory: an overview",
+   journal = "Injury Prevention",
+   number = 4,
+   year = 1998,
+   pages = 89--91,
+   note = "http://injuryprevention.bmj.com/content/4/2/89.full"
+}
+
+@TECHREPORT{SivakSchoettle,
+   author = "Michael Sivak and Brandon Schoettle",
+   title = "{R}oad {S}afety with {S}elf-{D}riving {V}ehicles: {G}eneral {L}imitations and {R}oad {S}haring with {C}onventional {V}ehicles",
+   institution = "The University of Michigan Transporatation Research Institute",
+   number = "UMTRI-2015-2",
+   month = "January",
+   year = 2015,
+}
+
+@ARTICLE{rossSafety,
+   author = "Philip E. Ross",
+   title = "{H}as {R}obocar {S}afety {B}een {H}yped?",
+   journal = "IEEE Spectrum",
+   month = "January 20",
+   year = 2015,
+   note = "http://spectrum.ieee.org/cars-that-think/transportation/safety/has-robocar-safety-been-hyped",
+}
+
+@ARTICLE{rossTrust,
+   author = "Philip E. Ross",
+   title = "{S}elf-driving {C}ars {Y}ou {C}an {T}rust",
+   journal = "IEEE Spectrum",
+   month = "April 25",
+   year = 2014,
+   note = "http://spectrum.ieee.org/cars-that-think/transportation/human-factors/selfdriving-cars-need-to-inspire-trust",
+}
+
+@ARTICLE{templetonB,
+   author = "Graham Templeton",
+   title = "{G}oogle's autonomous car gets a '{B}'in driving test: {N}ot great, but better than most of us",
+   journal = "ExtremeTech",
+   month = "September 15",
+   year = 2014,
+   note = "http://www.extremetech.com/extreme/187438-googles-autonomous-car-gets-a-b-in-driving-test-not-great-but-better-than-most-of-us",
+}
+
+@ARTICLE{madrigalHack,
+   author = "Alexis Madrigal",
+   title = "{W}hen {C}ars {A}re as {H}ackable as {C}ell {P}hones",
+   journal = "The Atlantic",
+   month = "September 8",
+   year = 2014,
+   note = "http://www.theatlantic.com/technology/archive/2014/09/when-cars-are-as-hackable-as-cell-phones/379734/",
+}
+
+@ARTICLE{harrisVirtual,
+   author = "Mark Harris",
+   title = "{G}oogle lobbies to test self-driving cars in {M}atrix-style virtual world",
+   journal = "The Guardian",
+   month = "August 21",
+   year = 2014,
+   note = "http://www.theguardian.com/technology/2014/aug/21/google-test-self-driving-cars-virtual-world-matrix",
+}
+
+@BOOK{NRCAutonomy,
+   author = "National Research Council",
+   title = "Autonomy Research for Civil Aviation: Toward a New Era of Flight",
+   publisher = "The National Academies Press",
+   address = "Washington, DC",
+   year = "2014",
+}
+
+@TECHREPORT{DSB,
+   author = "Defense Science Board",
+   title = "{T}he {R}ole of {A}utonomy in {D}o{D} {S}ystems",
+   institution = "Department of Defense",
+   month = "July",
+   year = 2012,
+}
+
+@ARTICLE{airlinereporter,
+   author = "David Parker Brown",
+   title = "{B}y the {N}umbers, {F}lying is a lot {S}after than {D}riving or {T}aking the {T}rain",
+   journal = "Airline Reporter",
+   month = "September 7",
+   year = 2010,
+   note = "http://www.airlinereporter.com/2010/09/flying-is-safe-and-i-am-going-to-prove-it/",
+}
+
+@TECHREPORT{PARCCAST,
+   author = "Flight Deck Automation Working Group",
+   title = "{O}perational {U}se of {F}light {P}ath {M}anagement {S}ystems",
+   institution = "Performance-Based Aviation Rulemaking Committee",
+   month = "September 5",
+   year = 2013,
+}
+
+@ARTICLE{predictmorecrashes,
+   key = "Experts predict more plane crashes",
+   title = "{E}xperts {P}redict {M}ore {P}lane {C}rashes",
+   journal = "Orlando Sentinel",
+   month = "November 7",
+   year = 1999,
+   note = "http://articles.orlandosentinel.com/1999-11-07/news/9911070029_1_plane-aviation-safety-type-of-accident",
+}
+
+@UNPUBLISHED{cast-safety.org,
+   author = "Commercial Aviation Safety Team",
+   title = "Fast Facts",
+   note = "On the front page at http://cast-safety.org/",
+}
+
+
+
 
 
 
